# socket

./: CMakeLists.txt  README.md  client  client.cpp  client2  client2.cpp  client3  client3.cpp  server  server.cpp  structure.h  testSerialize.cpp
client/: CMakeLists.txt
client/src/: CMakeLists.txt  client.cpp
client/test/: CMakeLists.txt  client.cpp  client3.cpp
common/: structure.h
server/: CMakeLists.txt
server/include/: server.h
server/src/: CMakeLists.txt  main.cpp  server.cpp
